# Lio

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  workers.py
app/routes/: chat.py  document.py
app/utils/: file_handler.py  langchain_agent.py  vector_db.py
